--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,10 +11,37 @@
             "program": "${workspaceFolder}/utils/model_viewer.py",
             "args": [
                 "--model_path",
-                "/home/robot-learning/Projects/ScenePose/data/cracker_box_icg/cracker_box_icg_1/star"
+                "${workspaceFolder}/data/cracker_box/cracker_box_1/star",
+                "--sparse_model_path",
+                "${workspaceFolder}/data/sfm_model/cracker_box/outputs_superpoint_superglue/tkl_model"
             ],
             "console": "integratedTerminal",
             "justMyCode": true
-        }
+        },
+        {
+            "name": "transfer [star]",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/utils/star_to_colmap.py",
+            "args": [
+                "--data_dir",
+                "${workspaceFolder}/data/cracker_box/cracker_box_1"
+            ],
+            "console": "integratedTerminal",
+            "justMyCode": true
+        },
+        {
+            "name": "OnePose: [sfm]",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/scan/run_sfm.py",
+            "args": [
+                "+preprocess=sfm_spp_spg_custom.yaml",
+                "redo=True"
+            ],
+            "cwd": "${workspaceFolder}",
+            "console": "integratedTerminal",
+            "justMyCode": true
+        },
     ]
 }
