--- a/.hydra/overrides.yaml
+++ b/.hydra/overrides.yaml
@@ -1,2 +1,3 @@
-- +preprocess=sfm_spp_spg_custom.yaml
-- redo=True
+- +experiment=test_GATsSPG_custom.yaml
+- object_detect_mode=GT_box
+- save_wis3d=True
