--- a/cfg/experiment/train_GATsSPG.yaml
+++ b/cfg/experiment/train_GATsSPG.yaml
@@ -31,8 +31,8 @@ trainer:
 
 
 model:
-    # _target_: src.models.spg_model.LitModelSPG
-    _target_: src.models.GATsSPG_lightning_model.LitModelGATsSPG
+    # _target_: one_pose.models.spg_model.LitModelSPG
+    _target_: one_pose.models.GATsSPG_lightning_model.LitModelGATsSPG
     optimizer: adam
     lr: 1e-3
     weight_decay: 0. 
@@ -66,7 +66,7 @@ model:
         # n_val_pairs_to_plot: 5
 
 datamodule:
-    _target_: src.datamodules.GATs_spg_datamodule.GATsSPGDataModule
+    _target_: one_pose.datamodules.GATs_spg_datamodule.GATsSPGDataModule
     data_dirs: ${data_dir}/sfm_model
     anno_dirs: outputs_${model.match_type}/anno
     train_anno_file: ${work_dir}/data/cache/${task_name}/train.json
