update: reorgnize icg

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -128,5 +128,31 @@
             "console": "integratedTerminal",
             "justMyCode": true
         },
+        {
+            "name": "ICG (generate)",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/build/examples/run_generated_tracker",
+            "args": [
+                "${workspaceFolder}/ICG/examples/generator_example/config.yaml"
+            ],
+            "stopAtEntry": false,
+            "cwd": "${fileDirname}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                },
+                {
+                    "description": "Set Disassembly Flavor to Intel",
+                    "text": "-gdb-set disassembly-flavor intel",
+                    "ignoreFailures": true
+                }
+            ]
+        },
     ]
 }
