--- a/ICG/examples/generator_example/config.yaml
+++ b/ICG/examples/generator_example/config.yaml
@@ -35,6 +35,7 @@ RegionModality:
       body: cracker_box
       color_camera: loader_color
       region_model: region_model
+      metafile_path: "region_modality.yaml"
       measure_occlusions:
          depth_camera: loader_depth
 LoaderDepthCamera:
@@ -57,6 +58,7 @@ DepthModality:
       body: cracker_box
       depth_camera: loader_depth
       depth_model: depth_model
+      metafile_path: "depth_modality.yaml"
 Optimizer:
    -
       name: optimizer
