--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "cmake.sourceDirectory": "${workspaceFolder}/ICG"
+    "cmake.sourceDirectory": "${workspaceFolder}/ICG",
+    "files.associations": {
+        "string": "cpp"
+    }
 }
