--- a/cfg/experiment/one_pose_server.yaml
+++ b/cfg/experiment/one_pose_server.yaml
@@ -1,33 +1,39 @@
-work_dir: ${hydra:runtime.cwd}
-data_dir: ${work_dir}/data
-print_config: true
+# @package _global_
+
 type: inference
 task_name: one_pose_prior
 num_leaf: 8
-suffix: ''
-save_demo: false
-save_wis3d: false
+suffix: ""
+save_demo: False
+save_wis3d: False
 demo_root: ${data_dir}/runs/demo
 video_mode: image
-host: 127.0.0.1
+host: '127.0.0.1'
 port: 8080
+
 model:
   onepose_model_path: ${data_dir}/models/checkpoints/onepose/GATsSPG.ckpt
   extractor_model_path: ${data_dir}/models/extractors/SuperPoint/superpoint_v1.pth
+
 network:
   detection: superpoint
   matching: superglue
-object_detect_mode: GT_box
+
+object_detect_mode: "GT_box" # ["GT_box", "feature_matching"]
 max_num_kp3d: 2500
 scan_data_dir: ${data_dir}
 sfm_model_dir: ${data_dir}/sfm_model
+
 input:
   data_dirs:
-  - ${scan_data_dir}/cracker_box cracker_box_1
+    - ${scan_data_dir}/cracker_box cracker_box_1
+
   sfm_model_dirs:
-  - ${sfm_model_dir}/cracker_box
+    - ${sfm_model_dir}/cracker_box
+  
   eval_dirs:
-  - ${scan_data_dir}/cracker_box cracker_box_3
+    - ${scan_data_dir}/cracker_box cracker_box_3
+
 output:
   vis_dir: ${work_dir}/runs/vis/GATsSPG
   eval_dir: ${work_dir}/runs/eval/GATsSPG
