--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -135,6 +135,7 @@
             "program": "${workspaceFolder}/one_pose_server.py",
             "args": [
                 "+experiment=one_pose_server.yaml",
+                "port=8081"
             ],
             "cwd": "${workspaceFolder}",
             "console": "integratedTerminal",
