update: add the feature modality framwork

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -78,6 +78,8 @@
         "cinttypes": "cpp",
         "typeindex": "cpp",
         "typeinfo": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "regex": "cpp",
+        "shared_mutex": "cpp"
     }
 }
