--- a/ICG/examples/generator_example/config.yaml
+++ b/ICG/examples/generator_example/config.yaml
@@ -59,6 +59,23 @@ DepthModality:
       depth_camera: loader_depth
       depth_model: depth_model
       metafile_path: "depth_modality.yaml"
+FeatureViewer:
+   -
+      name: feature_viewer
+      color_camera: loader_color
+      renderer_geometry: renderer_geometry
+FeatureModel:
+   -
+      name: feature_model
+      metafile_path: "model.yaml"
+      body: cracker_box
+FeatureModality:
+   -
+      name: feature_modality
+      body: cracker_box
+      color_camera: loader_color
+      feature_model: feature_model
+      metafile_path: "feature_modality.yaml"
 Optimizer:
    -
       name: optimizer
