--- a/ICG/examples/generator_example/config.yaml
+++ b/ICG/examples/generator_example/config.yaml
@@ -82,6 +82,7 @@ Optimizer:
       modalities:
          - region_modality
          - depth_modality
+         - feature_modality
 Tracker:
    -
       name: tracker
