--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "ICG/third_party/cppzmq"]
 	path = ICG/third_party/cppzmq
 	url = https://github.com/zeromq/cppzmq.git
+[submodule "r2d2"]
+	path = r2d2
+	url = git@github.com:changhaonan/r2d2.git
