--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -170,5 +170,19 @@
                 }
             ]
         },
+        {
+            "name": "r2d2 (server)",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/r2d2/run_server.py",
+            "args": [
+                "--port=9090",
+                "--model=models/r2d2_WASF_N16.pt",
+                "--top-k=500"
+            ],
+            "console": "integratedTerminal",
+            "justMyCode": true,
+            "cwd": "${workspaceFolder}/r2d2"
+        },
     ]
 }
