fixme: icg seems to be failed..

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -84,7 +84,7 @@
                 "${workspaceFolder}/ICG/examples/generator_example",
                 "--detector_port=8080",
                 "--feature_port=9090",
-                "--enable_feature",
+                // "--enable_feature",
                 "--enable_depth",
             ],
             "console": "integratedTerminal",
