--- a/.hydra/config.yaml
+++ b/.hydra/config.yaml
@@ -9,8 +9,6 @@ save_demo: false
 save_wis3d: false
 demo_root: ${data_dir}/runs/demo
 video_mode: image
-host: 127.0.0.1
-port: 8080
 model:
   onepose_model_path: ${data_dir}/models/checkpoints/onepose/GATsSPG.ckpt
   extractor_model_path: ${data_dir}/models/extractors/SuperPoint/superpoint_v1.pth
@@ -27,7 +25,7 @@ input:
   sfm_model_dirs:
   - ${sfm_model_dir}/cracker_box
   eval_dirs:
-  - ${scan_data_dir}/cracker_box cracker_box_3
+  - /home/robot-learning/Projects/SuperPose/data/cracker_box/cracker_box_4
 output:
   vis_dir: ${work_dir}/runs/vis/GATsSPG
   eval_dir: ${work_dir}/runs/eval/GATsSPG
