--- a/.hydra/overrides.yaml
+++ b/.hydra/overrides.yaml
@@ -1,2 +1,3 @@
-- +experiment=one_pose_server.yaml
-- port=8080
+- +experiment=one_pose_prior.yaml
+- input.eval_dirs=[/home/robot-learning/Projects/SuperPose/data/cracker_box/cracker_box_4]
+- video_mode=image
