--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "request": "launch",
             "program": "${workspaceFolder}/cv_server/run_matching_server.py",
             "args": [
-                "--type=R2D2",
+                "--type=SIFT",
                 "--save_dir=${workspaceFolder}/debug/Match",
                 "--query_dir=${workspaceFolder}/debug/Scene",
                 "--train_dir=${workspaceFolder}/debug/SFM",
