--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "r2d2"]
 	path = r2d2
 	url = git@github.com:changhaonan/r2d2.git
+[submodule "super_point"]
+	path = super_point
+	url = git@github.com:YuqiuGan/SuperGluePretrainedNetwork.git
